update admin_note for model course
